fix for mobile icon alignment

--- a/src/styles/components/splash.styl
+++ b/src/styles/components/splash.styl
@@ -102,6 +102,7 @@
   &__icon
     font-size 30px
     position absolute
+    top 0
     // float left
     // top -12px
     // right -40px
